agregando las notas con sus imagenes y documentos

--- a/templates/notas/crear_nota.html
+++ b/templates/notas/crear_nota.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
 {% block contenido %}
-	<form action="." method="post" accept-charset="utf-8">{% csrf_token %}
+	<form enctype="multipart/form-data" action="." method="post" accept-charset="utf-8">{% csrf_token %}
 		{{form.as_p}}
+		<h6>Agregar imagenes</h6>
+		{{form1.as_p}}
+		<h6>Agregar documentos</h6>
+		{{form2.as_p}}
 		<input id="boton-preguntar" type="submit" value="Guardar">
 	</form>
 {% endblock %}
