--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,94 @@
 {% extends "base.html"%}
 
 {%block contenido%}
-   <p>Esta es una prueba</p>
-   {% for nota in notas%}
-   	<img src="" alt="{{nota.titulo}}"><br>
-   	titulo: {{nota.titulo}}<br>
-   	contenido: {{nota.contenido}}<br>
-   	<a href="{{nota.get_absolute_url}}">Leer más</a><br>
-   	<hr>
-   {% endfor %}
+
+  <div class="row" id="actualidad">
+    <div class="encabezado">
+      <div class="container">
+        <div class="row">
+        <div class="span12 encabezado-title">
+          ACTUALIDAD DE CONTRAPARTES
+        </div>
+      </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+         {% for nota in notas%}
+            <div class="span3">
+             <div class="pais-index">Nicaragua<img src="/files/img/ni.png"></div>
+             <img class="imagen-noticia-index" src="/files/img/noticia.png">
+             <div class="titulo-noticia-index">
+               {{nota.titulo}}
+             </div>
+             <div class="detalle-noticia-index">
+               {{nota.contenido|safe|truncatewords_html:20}}
+             </div>
+             <a href="/notas/{{nota.slug}}" class="enlace-noticia-index">Leer mas</a>
+             {%for algo in nota.fotos.all%}
+             {{algo.foto}}
+             {%endfor%}
+           </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="encabezado">
+      <div class="container">
+        <div class="row">
+        <div class="span12 encabezado-title">
+          MIEMBROS
+        </div>
+      </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="span3 org-footer">
+          <div class="pais-footer"><img src="/files/img/ni-g.png">NICARAGUA</div>
+          <ul>
+            <li><a href="">Caritas Jinotega</a></li>
+            <li><a href="">Juan XVII</a></li>
+            <li><a href="">ASOMUPRO</a></li>
+          </ul>
+        </div>
+        <div class="span3 org-footer">
+          <div class="pais-footer"><img src="/files/img/hn-g.png">HONDURAS</div>
+          <ul>
+            <li><a href="">Caritas Jinotega</a></li>
+            <li><a href="">Juan XVII</a></li>
+            <li><a href="">ASOMUPRO</a></li>
+          </ul>
+        </div>
+        <div class="span3 org-footer">
+          <div class="pais-footer"><img src="/files/img/sl-g.png">EL SALVADOR</div>
+          <ul>
+            <li><a href="">Caritas Jinotega</a></li>
+            <li><a href="">Juan XVII</a></li>
+            <li><a href="">ASOMUPRO</a></li>
+          </ul>
+        </div>
+        <div class="span3 org-footer">
+          <div class="pais-footer"><img src="/files/img/gt-g.png">GUATEMALA</div>
+          <ul>
+            <li><a href="">Caritas Jinotega</a></li>
+            <li><a href="">Juan XVII</a></li>
+            <li><a href="">ASOMUPRO</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {%endblock%}
 
-{% block footer %}
    {{contra}}
 
    {% for k,v in contra.items %}
    <br>
-   	pais:{{k}}<br>
-   	    {% for i in v %} 
-   	        {% for a in i %}  {{a}}<br> {% endfor %}
-   	    {%endfor%}
+      pais:{{k}}<br>
+          {% for i in v %} 
+              {% for a in i %}  {{a}}<br> {% endfor %}
+          {%endfor%}
    {% endfor %}
-{% endblock %}
