--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class="row" id="grisheader">
+    <div class="row" id="grisheader-interna">
       <div class="container">
         <div class="row">
           <div class="span12" id="menulogo">
@@ -53,17 +53,6 @@
                       <div class="clean"></div>
                   </div>
               </div>
-          </div>
-          <div class="span12">
-            <div class="row">
-               <div class="span6" id="banner">
-                    <img src="/files/img/banner.png">
-                </div>
-               <div class="span6 bienvenida">
-                   <div id="bienvenida-title">Programa Medios de Vida Sostenible </div>
-                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Sed posuere consectetur est at lobortis. Donec sed odio dui.
-               </div>
-            </div>
           </div>
       </div>
     </div>
