--- a/templates/notas/crear_nota.html
+++ b/templates/notas/crear_nota.html
@@ -4,8 +4,9 @@
 	<form enctype="multipart/form-data" action="." method="post" accept-charset="utf-8">{% csrf_token %}
 		{{form.as_p}}
 		<h6>Agregar imagenes</h6>
-		{{ formset.management_form }}
-		{{formset.as_p}}
+		{{form2.as_p}}
+		<h6>Agregar adjuntos</h6>
+		{{form3.as_p}}
 		<input id="boton-preguntar" type="submit" value="Guardar">
 	</form>
 {% endblock %}
