--- a/templates/notas/notas_list.html
+++ b/templates/notas/notas_list.html
@@ -39,6 +39,20 @@
 			</div>
 			<hr>
 		{% endfor %}
+{% if is_paginated %}
+        {% if page_obj.has_previous %}
+          <a href="{% url notas_list %}?page={{ page_obj.previous_page_number }}">
+             Previous</a>
+        {% endif %}
+            <!-- current page -->
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            <!-- end current page -->
+        {% if page_obj.has_next %}
+         <a href="{% url notas_list %}?page={{ page_obj.next_page_number }}">
+                Next</a>
+         {% endif %}
+{% endif %}
+
 	</div>
 </div>
 {% endblock %}
