--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
              <div class="detalle-noticia-index">
                {{nota.contenido|safe|truncatewords_html:20}}
              </div>
-             <a href="/notas/{{nota.id}}" class="btn btn-inverse btn-mini"><i class="icon-plus-sign icon-white"></i>Leer mas</a>
+             <a href="/notas/{{nota.id}}" class="btn btn-inverse btn-mini">Leer mas</a>
            </div>
         {% endfor %}
       </div>
