--- a/templates/notas/notas_list.html
+++ b/templates/notas/notas_list.html
@@ -23,7 +23,7 @@
 </div>
 <div class="row">
 	<div class="container">
-		{% for nota in object_list %}
+		{% for nota in notas_list %}
 			<div class="row">
 				<div class="span3">
 				 {%for thumb in nota.fotos.all|slice:"1"%} 
