filtros de pais

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -127,14 +127,14 @@
 }
 
 .encabezado{
-	height:30px;
+	height:31px;
 	border-bottom:#ddd 1px solid;
 	margin-bottom:10px;
 }
 
 .encabezado-title{
 	color:#757575;
-	line-height:30px;
+	line-height:31px;
 	font-size:12px;
 	background:url(/files/img/encabezadoicon.png) no-repeat center left;
 	padding-left:25px;
@@ -235,6 +235,10 @@
 	font-weight:bold;
 }
 
+.titulo-medio:hover{
+	color:#016A68
+}
+
 .extrainfo{
 	color:#a5a5a5;
 	font-weight:bold;
@@ -242,4 +246,9 @@
 	border-bottom:#c6c6c6 3px double;
 	margin-bottom:5px;
 	padding-bottom:5px;
+}
+
+.filtrospais{
+	margin-top:1px;
+	float:right;
 }
