--- a/templates/notas/notas_list.html
+++ b/templates/notas/notas_list.html
@@ -4,17 +4,17 @@
 	<div class="encabezado">
 	  <div class="container">
 		    <div class="row">
-			    <div class="span8">
+			    <div class="span7">
 			    	<div class="encabezado-title">
 			      		NOTAS
 			  		</div>
 			    </div>
-			    <div class="span4">
-					<div class="btn-group">
-						Filtrar por {{cosa}}
-					  <button class="btn">1</button>
-					  <button class="btn">2</button>
-					  <button class="btn">3</button>
+			    <div class="span5">
+					<div class="btn-group filtrospais">
+					  <a class="btn disabled">Filtrar por</a>
+					  <button class="btn"><img src="/files/img/ni.png">Nicaragua</button>
+					  <button class="btn"><img src="/files/img/ni.png">Guatemala</button>
+					  <button class="btn"><img src="/files/img/ni.png">El salvador</button>
 					</div>
 			    </div>
 	        </div>
