--- a/templates/notas/notas_list.html
+++ b/templates/notas/notas_list.html
@@ -23,7 +23,7 @@
 </div>
 <div class="row">
 	<div class="container">
-		{% for nota in notas_list %}
+		{% for nota in notas %}
 			<div class="row">
 				<div class="span3">
 				 {%for thumb in nota.fotos.all|slice:"1"%} 
@@ -39,7 +39,27 @@
 			</div>
 			<hr>
 		{% endfor %}
-		{% include "paginador.html" %}
+{% if is_paginated %}
+    <ul class="pagination">
+        {% if notas.has_previous %}
+        <li>
+          <a href="{% url notas_list %}?page={{ notas.previous_page_number }}">
+            ← Anterior</a>
+        </li>
+        {% endif %}
+        <li class="active">
+            <!-- current page -->
+               <a href="#"> Page {{ notas.number }} of {{ notas.paginator.num_pages }}</a>
+            <!-- end current page -->
+        </li>
+        {% if notas.has_next %}
+         <li>
+         <a href="{% url notas_list %}?page={{ notas.next_page_number }}">
+                Siguiente →</a>
+         </li>
+         {% endif %}
+    </ul>
+{% endif %}
 	</div>
 </div>
 {% endblock %}
