--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -239,6 +239,14 @@
 	color:#016A68
 }
 
+.titulo-grande{
+	font-size:22px;
+	color:#016a68;
+	font-weight:bold;
+	line-height:1.2;
+	margin-bottom:5px;
+}
+
 .extrainfo{
 	color:#a5a5a5;
 	font-weight:bold;
@@ -248,7 +256,29 @@
 	padding-bottom:5px;
 }
 
+.extrainfofull{
+	color:#a5a5a5;
+	font-weight:bold;
+	font-size:13px;
+
+}
+
+.divisordoble{
+	border-top:#c6c6c6 3px double;
+	margin-top:5px;
+	padding-top:5px;
+}
 .filtrospais{
+	margin-top:1px;
+	float:right;
+	img{
+		margin-right:4px;
+		float: left;
+		padding-top:2px;
+	}
+}
+
+.acciones{
 	margin-top:1px;
 	float:right;
 }
