galeria en post

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -22,6 +22,8 @@
 	color:#5BB75B;
 }
 
+p{margin-bottom:15px;}
+
 /* Header */
 
 #grisheader{
@@ -185,6 +187,8 @@
 	}
 }
 
+.org-footer{margin-bottom:15px}
+
 .org-footer ul{
 	margin-left:0px;
 	li{
@@ -203,7 +207,6 @@
 .dividerline{
 	background:url(/files/img/dividerline.png) repeat-x;
 	height:11px;
-	margin-top:15px;
 }
 
 .footer{
@@ -281,4 +284,38 @@
 .acciones{
 	margin-top:1px;
 	float:right;
+}
+
+.thumbs{
+	margin-top:-10px;
+}
+
+.thumbs img{
+	float:left;
+	margin-right:10px;
+	margin-bottom:10px;
+	.rounded-corners(4px);
+	.box-shadow(0px,1px,2px,#333)
+}
+
+.thumbs img:hover{
+	.opacidad(0.8);
+}
+
+.imagen-slider{
+	margin-bottom:4px;
+}
+
+
+// Sidebar
+
+.sidebar-title{
+	text-transform:uppercase;
+	font-weight:bold;
+	margin-top:15px;
+}
+
+.doc-sidebar{
+	margin-top:10px;
+	font-size:12px;
 }
